# app/Models/Agente.php
@@ -1,0 +1,178 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\SoftDeletes;
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+
+/**
+ * @OA\Schema(
+ *      schema="Agente",
+ *      required={"segundo_nombre", "segundo_apellido"},
+ *      @OA\Property(
+ *          property="id",
+ *          description="id",
+ *          readOnly=true,
+ *          nullable=false,
+ *          type="integer",
+ *          format="int32"
+ *      ),
+ *      @OA\Property(
+ *          property="primer_nombre",
+ *          description="primer_nombre",
+ *          readOnly=false,
+ *          nullable=true,
+ *          type="string"
+ *      ),
+ *      @OA\Property(
+ *          property="segundo_nombre",
+ *          description="segundo_nombre",
+ *          readOnly=false,
+ *          nullable=false,
+ *          type="string"
+ *      ),
+ *      @OA\Property(
+ *          property="primer_apellido",
+ *          description="primer_apellido",
+ *          readOnly=false,
+ *          nullable=true,
+ *          type="string"
+ *      ),
+ *      @OA\Property(
+ *          property="segundo_apellido",
+ *          description="segundo_apellido",
+ *          readOnly=false,
+ *          nullable=false,
+ *          type="string"
+ *      ),
+ *      @OA\Property(
+ *          property="dni",
+ *          description="dni",
+ *          readOnly=false,
+ *          nullable=true,
+ *          type="string"
+ *      ),
+ *      @OA\Property(
+ *          property="cuil",
+ *          description="cuil",
+ *          readOnly=false,
+ *          nullable=true,
+ *          type="string"
+ *      ),
+ *      @OA\Property(
+ *          property="fecha_nacimiento",
+ *          description="fecha_nacimiento",
+ *          readOnly=false,
+ *          nullable=true,
+ *          type="string",
+ *          format="date"
+ *      ),
+ *      @OA\Property(
+ *          property="letra",
+ *          description="letra",
+ *          readOnly=false,
+ *          nullable=true,
+ *          type="string"
+ *      ),
+ *      @OA\Property(
+ *          property="numero",
+ *          description="numero",
+ *          readOnly=false,
+ *          nullable=true,
+ *          type="string"
+ *      ),
+ *      @OA\Property(
+ *          property="created_at",
+ *          description="created_at",
+ *          readOnly=true,
+ *          nullable=true,
+ *          type="string",
+ *          format="date-time"
+ *      ),
+ *      @OA\Property(
+ *          property="updated_at",
+ *          description="updated_at",
+ *          readOnly=true,
+ *          nullable=true,
+ *          type="string",
+ *          format="date-time"
+ *      ),
+ *      @OA\Property(
+ *          property="deleted_at",
+ *          description="deleted_at",
+ *          readOnly=true,
+ *          nullable=true,
+ *          type="string",
+ *          format="date-time"
+ *      )
+ * )
+ */
+class Agente extends Model
+{
+    use SoftDeletes;
+
+    use HasFactory;
+
+    public $table = 'agentes';
+    
+    const CREATED_AT = 'created_at';
+    const UPDATED_AT = 'updated_at';
+
+
+    protected $dates = ['deleted_at'];
+
+
+
+    public $fillable = [
+        'primer_nombre',
+        'segundo_nombre',
+        'primer_apellido',
+        'segundo_apellido',
+        'dni',
+        'cuil',
+        'fecha_nacimiento',
+        'letra_nivel',
+        'numero_grado'
+    ];
+
+    /**
+     * The attributes that should be casted to native types.
+     *
+     * @var array
+     */
+    protected $casts = [
+        'id' => 'integer',
+        'primer_nombre' => 'string',
+        'segundo_nombre' => 'string',
+        'primer_apellido' => 'string',
+        'segundo_apellido' => 'string',
+        'dni' => 'string',
+        'cuil' => 'string',
+        'fecha_nacimiento' => 'date',
+        'letra_nivel' => 'string',
+        'numero_grado' => 'string'
+    ];
+
+    /**
+     * Validation rules
+     *
+     * @var array
+     */
+    public static $rules = [
+        'primer_nombre' => 'nullable|string|max:255',
+        'segundo_nombre' => 'required|string|max:255',
+        'primer_apellido' => 'nullable|string|max:255',
+        'segundo_apellido' => 'required|string|max:255',
+        'dni' => 'nullable|string|max:255',
+        'cuil' => 'nullable|string|max:255',
+        'fecha_nacimiento' => 'nullable',
+        'letra_nivel' => 'nullable|string|max:8',
+        'numero_grado' => 'nullable|string|max:11',
+        'created_at' => 'nullable',
+        'updated_at' => 'nullable',
+        'deleted_at' => 'nullable'
+    ];
+
+    
+}
