# routes/api.php
@@ -5,18 +5,35 @@ use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Auth\AuthenticatedSessionController;
 require __DIR__.'/auth.php';
 
+/*
+|--------------------------------------------------------------------------
+| API Routes
+|--------------------------------------------------------------------------
+|
+| Here is where you can register API routes for your application. These
+| routes are loaded by the RouteServiceProvider within a group which
+| is assigned the "api" middleware group. Enjoy building your API!
+|
+*/
+
+
+
+
 /**
- *  EndPoints
+ * Private EndPoints
  */
+// Route::middleware(['auth:sanctum'])->get('/user', function (Request $request) {
+//     return $request->user();
+// });
+
+
 Route::middleware('auth:sanctum')->group(function () {
     Route::resource('posts', App\Http\Controllers\API\PostAPIController::class);
     Route::resource('users', App\Http\Controllers\API\UserAPIController::class);
     Route::resource('modulos', App\Http\Controllers\API\ModuleAPIController::class);
     Route::resource('roles', App\Http\Controllers\API\RolAPIController::class);
-
+    Route::resource('agentes', App\Http\Controllers\API\AgenteAPIController::class);
     Route::post('/logout', [AuthenticatedSessionController::class, 'logout'])
                 ->name('logout');
 });
-
-
 
